*api_url_updated

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -1,7 +1,7 @@
 <table border='1'>
 <tr>
-<th>Class name</th>
-<th>Method name</th>
+<th>Class username</th>
+<th>Method username</th>
 <th>Groups</th>
 </tr><tr>
 <td>com.qa.tests.CustomerWebLoginTest</td>
