--- a/test-output/Default suite/Default test.html
+++ b/test-output/Default suite/Default test.html
@@ -66,7 +66,7 @@ function toggleAllBoxes() {
 <td>Excluded groups:</td><td></td>
 </tr>
 </table><p/>
-<small><i>(Hover the method name to see the test class name)</i></small><p/>
+<small><i>(Hover the method username to see the test class username)</i></small><p/>
 <table width='100%' border='1' class='invocation-passed'>
 <tr><td colspan='4' align='center'><b>PASSED TESTS</b></td></tr>
 <tr><td><b>Test method</b></td>
